# compiler

./: .gitignore  Makefile  README  compile.sh  list.ll  test-struct_instanciation_in_function.ll  testall.sh
Wampus/: Makefile  README  banana  cherry  dune-project  fail-for.s  fail-test  nestAssign  test-for-new.s  test-list
Wampus/examples/: basic.wam  graph.wam  mini-database.wam  nestedLists.wam
Wampus/lib/: dune
Wampus/test-list.dSYM/Contents/: Info.plist
Wampus/tests/detemplate/: test-function_instantiation.wam
Wampus/tests/exec/: function_call  test-scope1.wam
Wampus/tests/exec/basic_print/: fail-print_int.wam  test-print_char.wam  test-print_float.wam  test-print_int.wam  test-print_string.wam
Wampus/tests/exec/lists/: fail-insert.err  fail-insert.wam  test-at.wam  test-empty.wam  test-insert.wam  test-list-length.wam  test-list-remove.wam  test-list.c  test-list.wam
Wampus/tests/exec/overloading_functions/: test-basic_overload.wam
Wampus/tests/exec/print-binops/: test-print_alltypes.out  test-print_float_binop.wam  test-print_float_int_arith.out  test-print_int_binop.out  test-print_int_binop.wam  test-print_mod.wam  test-print_stringconcat.out  test-print_stringconcat.wam
Wampus/tests/exec/print-uops/: test-print_uop.out  test-print_uop.wam
Wampus/tests/exec/sets/: test-set.wam
Wampus/tests/exec/structs/: basic_structs.wam  fail-struct_self_reference.wam  (+2 more)
Wampus/tests/lists/: test-list.c
Wampus/tests/scanner_parser_tests/: broken-for2.out  test-binops1.wam  test-equals.out  test-id-expr.out
Wampus/tests/semantic_tests/: uop.wam
(+323 files in other folders)
